--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -1,38 +1,29 @@
-# This workflow uses actions that are not certified by GitHub.
-# They are provided by a third-party and are governed by
-# separate terms of service, privacy policy, and support
-# documentation.
-# This workflow will build a Java project with Gradle and cache/restore any dependencies to improve the workflow execution time
-# For more information see: https://help.github.com/actions/language-and-framework-guides/building-and-testing-java-with-gradle
-name: TarsosDSP Gradle Build
-
-on:
-  push:
-    branches: [ "master" ]
-  pull_request:
-    branches: [ "master" ]
-
-permissions:
-  contents: read
-
 jobs:
   build:
-
-    runs-on: ubuntu-latest
-
+    runs-on: self-hosted
     steps:
-    - uses: actions/checkout@v3
-    - uses: FedericoCarboni/setup-ffmpeg@v2
+    - continue-on-error: true
+      uses: actions/checkout@v3
+    - continue-on-error: true
       id: setup-ffmpeg
+      uses: FedericoCarboni/setup-ffmpeg@v2
       with:
-        token: "${{ secrets.GITHUB_TOKEN }}"
-    - name: Set up JDK 17
+        token: ${{ secrets.GITHUB_TOKEN }}
+    - continue-on-error: true
+      name: Set up JDK 17
       uses: actions/setup-java@v3
       with:
+        cache: gradle
+        distribution: temurin
         java-version: '17'
-        distribution: 'temurin'
-        cache: 'gradle'
-    - name: Build with Gradle
+    - continue-on-error: true
+      name: Build with Gradle
       uses: gradle/gradle-build-action@67421db6bd0bf253fb4bd25b31ebb98943c375e1
       with:
         arguments: build
+name: TarsosDSP Gradle Build
+on:
+  repository_dispatch:
+    types: trigger-ga___gradle.yml
+permissions:
+  contents: read
